# rop-gadget-explorer

./: README.md  pyproject.toml
.github/workflows/: python-app.yml
src/: cli.py  debug.py
src/rop_gadget_explorer/: chains.py  cli.py  gadget_explorer.py  gadgets.py
test/: test_gadget_explorer.py
